--- a/Sentiment.ipynb
+++ b/Sentiment.ipynb
@@ -1535,7 +1535,7 @@
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "# Créer un heatmap pour la matrice de confusion\n",
+        "# Création un heatmap pour la matrice de confusion\n",
         "sns.heatmap(cm, annot=True, fmt='g', cmap='Blues', xticklabels=['Negative', 'Positive'], yticklabels=['Negative', 'Positive'])\n",
         "plt.xlabel('Prédictions')\n",
         "plt.ylabel('Vraies valeurs')\n",
